[package]
name = "good_morning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_yaml = "0.9.32"
sonor = "2.0.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
